--- a/synapsis/src/main/resources/templates/pages/network.html
+++ b/synapsis/src/main/resources/templates/pages/network.html
@@ -27,9 +27,8 @@
             </div>
         </div>
         <div class="col-start-5 col-end-12 row-span-1 h-14 bg-white border rounded-md">
-            <form th:action="@{/search}" class="h-full ml-4" method="get">
-
-                <input class="w-full h-full font-sans text-xl font-light ml-4"
+            <form th:action="@{/search}" class="h-full" method="get">
+                <input class="w-full h-full font-sans text-xl font-light pl-4"
                        placeholder="Search Connections" name="name">
             </form>
         </div>
