--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -70,7 +70,7 @@
                 <input type="text" id="award" name="award" th:value="${profile.award}"
                        class="mb-2 text-left font-normal  tracking-tight text-gray-900 "/>
                 <br>
-                <label>language(s)</label><br>
+                <label>Language(s)</label><br>
                 <input type="text" id="location" name="language" th:value="${profile.language}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br>
