Fix responsiveness for network and jobs pages, added empty images, added default company image, fixed broken link in home page

--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -7,7 +7,7 @@
             <div class="rounded-lg bg-neutral-100 shadow relative h-[450px] lg:h-[550px]">
                 <div class="lg:border-8 border-4 border-neutral-300 rounded-full lg:w-48 lg:h-48 w-24 h-24 absolute top-1/4 left-12 bg-white"
                 >
-                    <img class="h-full w-full rounded-full" src="../../assets/default_user.svg" alt="Default"
+                    <img class="h-full w-full rounded-full" src="../../assets/company_default.jpg" alt="Default"
                          id="profilePictureHolder"/>
                 </div>
                 <div class="w-full h-1/2 rounded-lg">
