--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -4,113 +4,202 @@
 <div layout:fragment="content">
     <div class="flex mx-auto justify-center mt-10 space-x-12">
         <!--Job Filters-->
-        <div class="border rounded-md self-start p-4 w-1/6">
+        <div class="max-lg:hidden border rounded-md self-start p-4 w-1/6">
             <div th:if="${role.toString() =='RECRUITER'}">
                 <div class="flex justify-center mt-5">
-                <a  th:href="@{/createjob}" class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Create a Job
-                    <i class="fa-regular fa-square-plus"></i>
-                </a>
-                </div>
-               <br> <hr class="border-t border-grey-light">
-            </div>
-                <div class="flex justify-center mt-1">
-                    <a  th:href="@{/savedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Saved Jobs
-                        <i class="fa-solid fa-bookmark"></i>
+                    <a th:href="@{/createjob}"
+                       class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Create
+                        a Job
+                        <i class="fa-regular fa-square-plus"></i>
                     </a>
                 </div>
+                <br>
                 <hr class="border-t border-grey-light">
-                <h1 class="text-3xl text-center text-black-variant mb-4 mt-5">Job Filters</h1>
-                <hr class="border-t border-grey-light">
+            </div>
+            <div class="flex justify-center mt-1">
+                <a th:href="@{/savedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Saved Jobs
+                    <i class="fa-solid fa-bookmark"></i>
+                </a>
+            </div>
+            <hr class="border-t border-grey-light">
+            <h1 class="text-3xl text-center text-black-variant mb-4 mt-5">Job Filters</h1>
+            <hr class="border-t border-grey-light">
             <form th:action="@{/jobs}" method="get">
-                    <label class="font-thin text-grey font-serif">Job Type</label>
-                    <fieldset class="font-serif text-grey">
-                        <div th:each="jobType : ${jobTypes}">
-                            <input type="radio" name="jobType" th:id="${jobType}" th:value="${jobType}" th:checked="${jobType == jobTypeFilter}" required>
-                            <label th:for="${jobType}" th:text="${jobType}" class="font-serif"></label><br>
-                        </div>
-                    </fieldset> <br>
-
-                    <label class="font-thin text-grey font-serif">Show internal jobs</label><br>
-                    <input type="radio" id="internal-yes" name="showInternalJobs" value="true" th:checked="${showInternalJobsFilter != null and showInternalJobsFilter}" required>
-                    <label for="internal-yes" class="text-grey font-serif">Yes</label><br>
-                    <input type="radio" id="internal-no" name="showInternalJobs" value="false" th:checked="${showInternalJobsFilter != null and !showInternalJobsFilter}">
-                    <label for="internal-no" class="text-grey font-serif">No</label><br><br>
-
-                    <label class="font-thin text-grey font-serif">Show external jobs</label><br>
-                    <input type="radio" id="external-yes" name="showExternalJobs" value="true" th:checked="${showExternalJobsFilter != null and showExternalJobsFilter}" required>
-                    <label for="external-yes" class="text-grey font-serif">Yes</label><br>
-                    <input type="radio" id="external-no" name="showExternalJobs" value="false" th:checked="${showExternalJobsFilter != null and !showExternalJobsFilter}">
-                    <label for="external-no" class="text-grey font-serif">No</label><br><br>
-
-                    <input type="hidden" name="isFilteringJobs" value="true">
-                    <input type="hidden" name="searchTerm" th:value="${searchTerm}">
-                    <div class="flex justify-center">
-                        <button type="submit" class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Filter Jobs</button>
+                <label class="font-thin text-grey font-serif">Job Type</label>
+                <fieldset class="font-serif text-grey">
+                    <div th:each="jobType : ${jobTypes}">
+                        <input type="radio" name="jobType" th:id="${jobType}" th:value="${jobType}"
+                               th:checked="${jobType == jobTypeFilter}" required>
+                        <label th:for="${jobType}" th:text="${jobType}" class="font-serif"></label><br>
                     </div>
-                </form>
-        </div>
+                </fieldset>
+                <br>
 
-        <!--Displaying all jobs-->
-        <div class="grid grid-cols-1 md:grid-cols-3 md:gap-3 w-1/2">
+                <label class="font-thin text-grey font-serif">Show internal jobs</label><br>
+                <input type="radio" id="internal-yes" name="showInternalJobs" value="true"
+                       th:checked="${showInternalJobsFilter != null and showInternalJobsFilter}" required>
+                <label for="internal-yes" class="text-grey font-serif">Yes</label><br>
+                <input type="radio" id="internal-no" name="showInternalJobs" value="false"
+                       th:checked="${showInternalJobsFilter != null and !showInternalJobsFilter}">
+                <label for="internal-no" class="text-grey font-serif">No</label><br><br>
 
-            <form th:action="@{/jobs}" class="h-full md:col-span-3 col-span-1" method="get">
-                <div class="flex h-14 space-x-1">
-                    <button type="submit" class="w-10 h-full border rounded-md"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    <input th:value="${searchTerm}" class="border rounded-md w-full h-full pl-4 font-sans text-xl font-light" placeholder="Search Jobs" name="searchTerm">
+                <label class="font-thin text-grey font-serif">Show external jobs</label><br>
+                <input type="radio" id="external-yes" name="showExternalJobs" value="true"
+                       th:checked="${showExternalJobsFilter != null and showExternalJobsFilter}" required>
+                <label for="external-yes" class="text-grey font-serif">Yes</label><br>
+                <input type="radio" id="external-no" name="showExternalJobs" value="false"
+                       th:checked="${showExternalJobsFilter != null and !showExternalJobsFilter}">
+                <label for="external-no" class="text-grey font-serif">No</label><br><br>
+
+                <input type="hidden" name="isFilteringJobs" value="true">
+                <input type="hidden" name="searchTerm" th:value="${searchTerm}">
+                <div class="flex justify-center">
+                    <button type="submit"
+                            class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">
+                        Filter Jobs
+                    </button>
                 </div>
             </form>
+        </div>
 
-              <div th:if="${jobs.size() == 0}" class="h-14 md:col-span-3 col-span-1 mb-4">
-                <div class="p-4 mb-4 mt-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
-                  No results found.
+
+        <!--Displaying all jobs-->
+        <div class="grid grid-cols-1 xl:grid-cols-3 lg:gap-3 lg:grid-cols-2 w-1/2">
+
+            <form th:action="@{/jobs}" class="h-full xl:col-span-3 lg:col-span-2 col-span-1" method="get">
+                <div class="flex h-14 space-x-1">
+                    <button type="submit" class="w-10 h-full border rounded-md"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
+                    <input th:value="${searchTerm}"
+                           class="border rounded-md w-full h-full pl-4 font-sans text-xl font-light"
+                           placeholder="Search Jobs" name="searchTerm">
                 </div>
-              </div>
+            </form>
+            <!--Dropdown for mobile-->
+            <div class="lg:hidden border rounded-md self-start col-span-1 h-full px-2 mt-2">
+                <button id="filterButton" type="button"
+                        class="text-sm text-gray-400 w-full rounded-lg text-left mt-2">
+                    Choose a filter...
+                    <i id="filterIcon" class="fa-solid fa-chevron-down fa-xl float-right mt-2"></i>
+                </button>
+                <div class="hidden w-full" id="filterMenu">
+                    <div th:if="${role.toString() =='RECRUITER'}">
+                        <div class="flex justify-center mt-5">
+                            <a th:href="@{/createjob}"
+                               class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Create
+                                a Job
+                                <i class="fa-regular fa-square-plus"></i>
+                            </a>
+                        </div>
+                        <br>
+                        <hr class="border-t border-grey-light">
+                    </div>
+                    <div class="flex justify-center mt-1">
+                        <a th:href="@{/savedjobs}" class="text-lg text-center text-black-variant mb-4 mt-5">Saved Jobs
+                            <i class="fa-solid fa-bookmark"></i>
+                        </a>
+                    </div>
+                    <hr class="border-t border-grey-light">
+                    <h1 class="text-3xl text-center text-black-variant mb-4 mt-5">Job Filters</h1>
+                    <hr class="border-t border-grey-light">
+                    <form th:action="@{/jobs}" method="get">
+                        <label class="font-thin text-grey font-serif">Job Type</label>
+                        <fieldset class="font-serif text-grey">
+                            <div th:each="jobType : ${jobTypes}">
+                                <input type="radio" name="jobType" th:id="${jobType}" th:value="${jobType}"
+                                       th:checked="${jobType == jobTypeFilter}" required>
+                                <label th:for="${jobType}" th:text="${jobType}" class="font-serif"></label><br>
+                            </div>
+                        </fieldset>
+                        <br>
 
-            <div th:if="${jobs.size() > 0}" th:each="job: ${jobs}" class="flex flex-col inline-block rounded-2xl shadow w-56 min-h-min bg-white mt-4 mr-4 pb-4">
+                        <label class="font-thin text-grey font-serif">Show internal jobs</label><br>
+                        <input type="radio" id="internal-yes" name="showInternalJobs" value="true"
+                               th:checked="${showInternalJobsFilter != null and showInternalJobsFilter}" required>
+                        <label for="internal-yes" class="text-grey font-serif">Yes</label><br>
+                        <input type="radio" id="internal-no" name="showInternalJobs" value="false"
+                               th:checked="${showInternalJobsFilter != null and !showInternalJobsFilter}">
+                        <label for="internal-no" class="text-grey font-serif">No</label><br><br>
 
-              <img class="w-56 h-40">
-              <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.position}"></div>
-              <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.company}"></div>
+                        <label class="font-thin text-grey font-serif">Show external jobs</label><br>
+                        <input type="radio" id="external-yes" name="showExternalJobs" value="true"
+                               th:checked="${showExternalJobsFilter != null and showExternalJobsFilter}" required>
+                        <label for="external-yes" class="text-grey font-serif">Yes</label><br>
+                        <input type="radio" id="external-no" name="showExternalJobs" value="false"
+                               th:checked="${showExternalJobsFilter != null and !showExternalJobsFilter}">
+                        <label for="external-no" class="text-grey font-serif">No</label><br><br>
 
-              <div class="grow bg-light mx-auto w-11/12 rounded-2xl text-xs mt-2 mb-4">
-                <div class="font-sans font-light p-2" th:text="${job.description}"></div>
-                <p class="px-2">Salary: TBD</p>
-                <a th:href="@{/job/{id}(id=${job.getID()})}" class="inline-block px-2 py-2 underline">More details</a>
-                <p class="px-2" th:if="${job.isExternal}">***APPLY BY WEBSITE***</p>
-              </div>
-
-              <div class="flex justify-evenly mt-auto">
-
-                <div th:if="${jobsSubmitted.contains(job)}">
-                  <button class="inline-block px-4 py-4 text-white bg-primary-variant rounded-2xl" disabled>Submitted</button>
-                </div>
-
-                <div th:unless="${jobsSubmitted.contains(job)}" class="hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150">
-                  <a th:href="@{/jobapplication/{id}(id=${job.getID()})}" class="inline-block px-4 py-4 text-white bg-primary rounded-2xl">Apply</a>
-                </div>
-
-                <div th:if="${!savedJobs.contains(job.getID())}">
-                    <form th:action="@{/savejob}" method="post">
-                        <input type="hidden" name="jobId" th:value="${job.getID()}" />
-                        <button class="text-white bg-primary p-4 rounded-2xl
-              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i class="fa-regular fa-bookmark"></i></button>
+                        <input type="hidden" name="isFilteringJobs" value="true">
+                        <input type="hidden" name="searchTerm" th:value="${searchTerm}">
+                        <div class="flex justify-center">
+                            <button type="submit"
+                                    class="btn btn-primary bg-primary text-base mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">
+                                Filter Jobs
+                            </button>
+                        </div>
                     </form>
                 </div>
-
-                <div th:if="${savedJobs.contains(job.getID())}">
-                    <form th:action="@{/deletesavedjob}" method="post">
-                        <input type="hidden" name="jobId" th:value="${job.getID()}" />
-                        <button class="text-white bg-primary p-4 rounded-2xl
-              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i class="fa-solid fa-bookmark"></i></button>
-                    </form>
-                </div>
-
-              </div>
-
             </div>
-          </div>
+
+            <div th:if="${jobs.size() == 0}" class="h-14 xl:col-span-3 lg:col-span-2 col-span-1 mb-4">
+                <div class="p-4 mb-4 mt-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                    No results found.
+                </div>
+            </div>
+
+            <div th:if="${jobs.size() > 0}" th:each="job: ${jobs}"
+                 class="flex flex-col inline-block rounded-2xl shadow w-56 min-h-min bg-white mt-4 mr-4 pb-4">
+                <a th:href="@{/job/{id}(id=${job.getID()})}" class="hover:text-black">
+                    <img class="w-56 h-40" src="../../assets/company_default.jpg">
+                    <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.position}"></div>
+                    <div class="font-sans text-base font-light mt-2 ml-4" th:text="${job.company}"></div>
+
+                    <div class="grow bg-light mx-auto w-11/12 rounded-2xl text-xs mt-2 mb-4">
+                        <div class="font-sans font-light p-2" th:text="${job.description}"></div>
+                        <a th:href="@{/job/{id}(id=${job.getID()})}" class="inline-block px-2 py-2 underline">More
+                            details</a>
+                        <p class="px-2" th:if="${job.isExternal}">***APPLY BY WEBSITE***</p>
+                    </div>
+
+                    <div class="flex justify-evenly mt-auto">
+
+                        <div th:if="${jobsSubmitted.contains(job)}">
+                            <button class="inline-block px-4 py-4 text-white bg-primary-variant rounded-2xl" disabled>
+                                Submitted
+                            </button>
+                        </div>
+
+                        <div th:unless="${jobsSubmitted.contains(job)}"
+                             class="hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150">
+                            <a th:href="@{/jobapplication/{id}(id=${job.getID()})}"
+                               class="inline-block px-4 py-4 text-white hover:text-white hover:bg-opacity-60 bg-primary rounded-2xl">Apply</a>
+                        </div>
+
+                        <div th:if="${!savedJobs.contains(job.getID())}">
+                            <form th:action="@{/savejob}" method="post">
+                                <input type="hidden" name="jobId" th:value="${job.getID()}"/>
+                                <button class="text-white bg-primary p-4 rounded-2xl
+              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i
+                                        class="fa-regular fa-bookmark"></i></button>
+                            </form>
+                        </div>
+
+                        <div th:if="${savedJobs.contains(job.getID())}">
+                            <form th:action="@{/deletesavedjob}" method="post">
+                                <input type="hidden" name="jobId" th:value="${job.getID()}"/>
+                                <button class="text-white bg-primary p-4 rounded-2xl
+              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit"><i
+                                        class="fa-solid fa-bookmark"></i></button>
+                            </form>
+                        </div>
+
+                    </div>
+                </a>
+            </div>
+        </div>
 
     </div>
-
+    <script src="/js/jobs.js"></script>
 </div>
+
 </html>
