--- a/synapsis/src/main/resources/templates/pages/updatecompanypage.html
+++ b/synapsis/src/main/resources/templates/pages/updatecompanypage.html
@@ -46,8 +46,10 @@
                        class="mb-2 text-left font-normal tracking-tight text-gray-900  "/>
                 <br>
                 <label>Location</label><br>
-                <input type="text" id="location" name="location" th:value="${profile.location}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
+                <select type="text" id="location" name="country" th:value="${profile.location}"
+                        class="country mb-2 text-left font-normal tracking-tight text-gray-900">
+                    <option value="" disabled selected>Select a country</option>
+                </select>
                 <br>
                 <label>Speciality</label><br>
                 <input type="text" id="speciality" name="speciality" th:value="${profile.speciality}"
@@ -60,5 +62,6 @@
             </div>
         </div>
     </form>
+    <script src="/js/countries.js"></script>
 </div>
 </html>
