#278 Implement functionality for a recruiter to access his/her own created jobs

--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -13,6 +13,11 @@
                         <i class="fa-regular fa-square-plus"></i>
                     </a>
                 </div>
+                <div class="flex justify-center">
+                    <a th:href="@{/myjobs}" class="text-lg text-center text-black-variant mt-5">My Created Jobs
+                        <i class="fa-solid fa-bookmark"></i>
+                    </a>
+                </div>
                 <br>
                 <hr class="border-t border-grey-light">
             </div>
