#269 removed redundant button

--- a/synapsis/src/main/resources/templates/pages/login.html
+++ b/synapsis/src/main/resources/templates/pages/login.html
@@ -70,6 +70,8 @@
                 <div class="mb-4 text-black font-serif font-normal text-base">
                     Forgot your password? <a th:href="@{/passwordreset}" class="text-primary">Click here</a>
                 </div>
+                <a th:href="@{/}" class="btn btn-primary bg-primary text-base mb-2 mx-auto font-thin
+                ">Back to Home</a>
             </div>
         </div>
 
