--- a/synapsis/src/main/resources/templates/pages/savedjobs.html
+++ b/synapsis/src/main/resources/templates/pages/savedjobs.html
@@ -6,8 +6,6 @@
   <div class="w-1/2 mx-auto">
     <div class="mx-auto">
       <p class="text-2xl font-serif font-black-variant font-thin mb-4 text-center">Saved Jobs</p>
-      <a th:href="@{/jobs}" class="btn btn-primary bg-primary text-base mb-2 mx-auto rounded-2xl font-thin transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Back to Jobs Page</a>
-
 
       <div th:if="${jobs.size() == 0}">
         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
@@ -37,8 +35,8 @@
                  <button class="inline-block px-4 py-4 text-white bg-primary-variant rounded-2xl" disabled>Submitted</button>
                </div>
 
-               <div th:unless="${jobsSubmitted.contains(job.get())}">
-                 <a th:href="@{/jobapplication/{id}(id=${job.get().getID()})}" class="inline-block px-4 py-4 text-white bg-primary rounded-2xl">Apply</a>
+               <div th:unless="${jobsSubmitted.contains(job.get())}" class="transition hover:-translate-y-0.5 duration-150">
+                 <a th:href="@{/jobapplication/{id}(id=${job.get().getID()})}" class="inline-block px-4 py-4 text-white bg-primary rounded-2xl hover:bg-opacity-60 hover:text-whitegit ">Apply</a>
                </div>
 
               <form th:action="@{/deletesavedjob}" method="post">
