#261 Added Contact us page, restyled services page

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -30,7 +30,7 @@
                         >Services</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="/contactUs"
                         >Contact</a>
                     </li>
                 </ul>
