--- a/synapsis/src/main/resources/templates/pages/ourServices.html
+++ b/synapsis/src/main/resources/templates/pages/ourServices.html
@@ -4,18 +4,145 @@
 <div layout:fragment="content">
 
 
-  <div class="container flex flex-wrap flex-col border p-8 ml-12  mt-10 shadow-sm w-2/3 lg:w-2/3 mb-20 rounded-sm">
-    <h2 class="text-left text-4xl">Our Services</h2>
-    <hr class="border-t border-grey-light">
-    <br>
-    <ul class=" text-xl   text-grey list-disc list-inside ">
-      <li>Connecting with users including recruiters and companies.</li>
-      <li>Messaging to other users including sending files and images.</li>
-      <li>Searching and applying to internal (via Synapsis) and external jobs.</li>
-      <li>Posting jobs and advertising them.</li>
-      <li>Having access job alerts and suggestions.</li>
-      <li>Filtering jobs and saving them and much more ! </li>
-    </ul>
-  </div>
+    <div class="container flex flex-wrap flex-col border p-8 mx-auto  mt-10 shadow-sm w-2/3 lg:w-2/3 mb-20 rounded-sm">
+        <h2 class="text-center text-6xl">Our Services</h2> <br>
+        <hr class="border-t border-grey-light">
+        <br>
+        <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <div class="sm:hidden">
+                <label for="tabs" class="sr-only">Select tab</label>
+                <select id="tabs"
+                        class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-red-600 focus:border-red-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-600 dark:focus:border-red-600">
+                    <option>Networking</option>
+                    <option>Messaging</option>
+                    <option>Jobs</option>
+                </select>
+            </div>
+          <!--Bullet points under each section-->
+          <ul class="hidden text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400"
+                id="fullWidthTab" data-tabs-toggle="#fullWidthTabContent" role="tablist">
+                <li class="w-full">
+                    <button id="networking-tab" data-tabs-target="#networking" type="button" role="tab"
+                            aria-controls="networking" aria-selected="true"
+                            class="inline-block w-full p-4 rounded-tl-lg bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                        Networking
+                    </button>
+                </li>
+                <li class="w-full">
+                    <button id="messaging-tab" data-tabs-target="#messaging" type="button" role="tab"
+                            aria-controls="messaging" aria-selected="false"
+                            class="inline-block w-full p-4 bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                        Messaging
+                    </button>
+                </li>
+                <li class="w-full">
+                    <button id="jobs-tab" data-tabs-target="#jobs" type="button" role="tab" aria-controls="jobs"
+                            aria-selected="false"
+                            class="inline-block w-full p-4 rounded-tr-lg bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">
+                        Jobs
+                    </button>
+                </li>
+            </ul>
+            <div id="fullWidthTabContent" class="border-t border-gray-200 dark:border-gray-600">
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="networking" role="tabpanel"
+                     aria-labelledby="networking-tab">
+                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Search for millions of users</span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Check out many company pages that you are interested to work for</span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Connect with users including recruiters and companies</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="messaging" role="tabpanel"
+                     aria-labelledby="messaging-tab">
+                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Message to other users including sending files and images</span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Report for any type of harassement and be in a safe environment while enjoying the experience </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="jobs" role="tabpanel"
+                     aria-labelledby="jobs-tab">
+                    <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Searching and applying to internal (via Synapsis) and external jobs </span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Filtering jobs and saving them</span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Posting jobs and advertising them </span>
+                        </li>
+                        <li class="flex space-x-2">
+                            <svg class="flex-shrink-0 w-4 h-4 text-red-600" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+                                      clip-rule="evenodd"></path>
+                            </svg>
+                            <span class="leading-tight">Having access job alerts and suggestions </span>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
 </html>
